Reconfiguring for downstream project inclusion