@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.djp3</groupId>
 	<artifactId>ssl-revocation-manager</artifactId>
-	<version>0.0.3-djp3</version>
+	<version>0.1.4-djp3</version>
 	<name>SSL-revocation-manager</name>
 	<description>A Java library for checking, validating, and caching SSL revocation results via OCSP or CRL</description>
 	<properties>
@@ -22,10 +22,11 @@
 		<maven-dependency-plugin.version>3.4.0</maven-dependency-plugin.version>
 		<maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
 		<os-maven-plugin.version>1.7.1</os-maven-plugin.version>
+		<jvm.args>-Dfile.encoding=UTF-8 -Duser.timezone=UTC --add-opens java.base/java.lang=ALL-UNNAMED --add-modules=ALL-DEFAULT</jvm.args>
 	</properties>
 	<build>
 		<extensions>
-			<!-- provides os.detected.classifier (i.e. linux-x86_64, osx-x86_64) property -->
+			<!-- Updated os-maven-plugin groupId and version -->
 			<extension>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
@@ -33,10 +34,31 @@
 			</extension>
 		</extensions>
 		<plugins>
+			<!-- Added protobuf-maven-plugin for protobuf code generation -->
+			<plugin>
+				<groupId>org.xolstice.maven.plugins</groupId>
+				<artifactId>protobuf-maven-plugin</artifactId>
+				<version>0.6.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test-compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<protocArtifact>com.google.protobuf:protoc:4.28.2:exe:${os.detected.classifier}</protocArtifact>
+					<protoSourceRoot>${protobuf.input.directory}</protoSourceRoot>
+					<outputDirectory>${protobuf.output.directory}/protobuf/java</outputDirectory>
+				</configuration>
+			</plugin>
+
+			<!-- Updated build-helper-maven-plugin configuration -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>${build-helper-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -45,42 +67,38 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>target/generated-sources</source>
+								<source>${protobuf.output.directory}/protobuf/java</source>
 							</sources>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Updated maven-compiler-plugin version and ensured compatibility with 
+				Java 19 -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<inherited>true</inherited>
+				<version>3.11.0</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+
+			<!-- Updated maven-surefire-plugin version and configuration -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>common-junit48</artifactId>
-						<version>2.18.1</version>
-					</dependency>
-				</dependencies>
-				<!--<configuration combine.self="override">-->
+				<version>3.5.0</version>
 				<configuration>
-					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					<argLine>${jvm.args}</argLine>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
-					<includes>
-						<include>**/*.class</include>
-					</includes>
+					<!-- Removed unnecessary includes -->
 				</configuration>
 			</plugin>
+
+			<!-- Existing plugins remain the same -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -101,14 +119,13 @@
 										<exclude>META-INF/*.RSA</exclude>
 									</excludes>
 								</filter>
-								<!-- Not explicitly referenced by the code, so it gets stripped by minimizeJar. -->
+								<!-- Ensure commons-logging is included if necessary -->
 								<filter>
 									<artifact>commons-logging:commons-logging</artifact>
 									<includes>
 										<include>org/apache/commons/logging/**</include>
 									</includes>
 								</filter>
-
 							</filters>
 							<finalName>SSL-revocation-manager-${project.version}-with-deps</finalName>
 							<minimizeJar>true</minimizeJar>
@@ -116,6 +133,8 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Existing plugins -->
 			<plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
@@ -128,6 +147,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -141,6 +161,8 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Existing plugins -->
 			<plugin>
 				<artifactId>maven-gpg-plugin</artifactId>
 				<version>1.6</version>
@@ -163,6 +185,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -176,6 +199,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>maven-snapshots</id>
@@ -183,6 +207,11 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
+		<dependency>
+			<groupId>org.certificate-transparency</groupId>
+			<artifactId>ctlog</artifactId>
+			<version>0.1.4-djp3</version>
+		</dependency>
 		<dependency>
 			<groupId>com.github.spotbugs</groupId>
 			<artifactId>spotbugs-annotations</artifactId>
@@ -204,8 +233,6 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.23.1</version>
 		</dependency>
-		<!--
-		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
@@ -261,12 +288,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 			<version>4.4.16</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.certificate-transparency</groupId>
-			<artifactId>ctlog</artifactId>
-			<version>0.1.3-djp3</version>
 		</dependency>
 	</dependencies>
 </project>
